fixed overflow hidden in modal popup

--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,7 @@ nav ul li a:hover {
   justify-content: center;
   align-items: center;
   gap: 0.5rem;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .exit {
